--- a/when&where.html
+++ b/when&where.html
@@ -96,7 +96,7 @@
                 >Get Directions</a
               >
             </div>
-            <div class="map-container" id="map">
+           <!-- <div class="map-container" id="map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7926.256194759304!2d-1.2174666908033027!3d6.631008316825648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdbe3bbd6ec57d5%3A0x7680657d7393f6de!2sNew%20Apostolic%20Church%20Konongo!5e0!3m2!1sen!2sgh!4v1759192338612!5m2!1sen!2sgh"
                 width="100%"
@@ -112,6 +112,7 @@
                 >Open in Google Maps</a
               >
             </p>
+            -->
             <article>
               <h3>Bless hotel</h3>
               <!--<p>Reception</p>-->
@@ -165,3 +166,4 @@
     <script src="./js/app.js"></script>
   </body>
 </html>
+
