--- a/when&where.html
+++ b/when&where.html
@@ -90,29 +90,29 @@
             <!--<p>ceremony</p>-->
             <div class="directions-container">
               <a
-                href="https://www.google.com/maps/dir//JQJP%2B8XQ+New+Apostolic+Church+Konongo,+R76,+Konongo/@6.6310083,-1.2174667,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0xfdbe3bbd6ec57d5:0x7680657d7393f6de!2m2!1d-1.2124832!2d6.6310085?entry=ttu&g_ep=EgoyMDI1MDkyOC4wIKXMDSoASAFQAw%3D%3D"
+                href="https://www.google.com/maps/dir//6.62812,-1.21309/@6.62812,-1.21309,17z/data=!4m6!1m5!3m4!2zNsKwMzcnNDEuMiJOIDHCsDEyJzQ3LjEiVw!8m2!3d6.62812!4d-1.21309?entry=ttu&g_ep=EgoyMDI1MTAxNC4wIKXMDSoASAFQAw%3D%3D"
                 target="_blank"
                 class="directions-btn btn"
                 >Get Directions</a
               >
             </div>
-           <!-- <div class="map-container" id="map">
+            <div class="map-container" id="map">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7926.256194759304!2d-1.2174666908033027!3d6.631008316825648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdbe3bbd6ec57d5%3A0x7680657d7393f6de!2sNew%20Apostolic%20Church%20Konongo!5e0!3m2!1sen!2sgh!4v1759192338612!5m2!1sen!2sgh"
+                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3963.151317697208!2d-1.2130900000000002!3d6.628120000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNsKwMzcnNDEuMiJOIDHCsDEyJzQ3LjEiVw!5e0!3m2!1sen!2sgh!4v1760688048387!5m2!1sen!2sgh"
                 width="100%"
                 height="250"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
+              ></iframe
+              >"
             </div>
             <p class="map-fallback">
-              <a href="https://maps.app.goo.gl/fExqq3EXu93XPv7z7"
+              <a href="https://maps.app.goo.gl/BqVezvVzULFa2MRB8"
                 >Open in Google Maps</a
               >
             </p>
-            -->
             <article>
               <h3>Bless hotel</h3>
               <!--<p>Reception</p>-->
@@ -166,4 +166,3 @@
     <script src="./js/app.js"></script>
   </body>
 </html>
-
