--- a/when&where.html
+++ b/when&where.html
@@ -85,7 +85,7 @@
           <article><h4>Where</h4></article>
           <article class="where-text">
             <h3>
-              Christ Apostolic Church International (CACI)<br />Konongo Central
+              Christ Apostolic Church International<br />Konongo Central
             </h3>
             <!--<p>ceremony</p>-->
             <div class="directions-container">
@@ -166,3 +166,4 @@
     <script src="./js/app.js"></script>
   </body>
 </html>
+
